--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,12 +4,9 @@ body {
     font-family: Poppins, Open Sans, Helvetica Neue, Arial, sans-serif;
     color: #fff;
 }
-h1,h2,h3,h4,h5,h6,#mainNav, #mainNav .navbar-brand,p{
+h1,h2,h3,h4,h5,h6,#mainNav, #mainNav .navbar-brand,p,.masthead button a,span{
     font-family: Poppins, Open Sans, Helvetica Neue, Arial, sans-serif;
     font-weight:  400;
-}
-.navbar-brand {
-    padding-left: 50px;
 }
 .overlay {
     height: 100%;
@@ -61,34 +58,28 @@ h1,h2,h3,h4,h5,h6,#mainNav, #mainNav .navbar-brand,p{
     border-color:transparent;
     background-color: transparent;
 }
-
+.nav-item a{
+    font-size: 16px;
+}
 h1 {
 letter-spacing: -1px;
 }
 
-@media (min-width:992px) {
-    header.masthead {
-      height: 100vh;
-      min-height: 650px;
-      padding-top: 0;
-      padding-bottom: 0;
-    }
-    ul.navbar-nav li{
-        padding: 15px;
-    }
-  }
-
 header.masthead {
     padding-top: 10rem;
     padding-bottom: calc(10rem - 56px);
-    background-position: 50%;
+    background-position: 100%;
     background-size: cover;
 }
 header{    
     animation: animate 15s ease-in-out infinite;
-    overflow-x: hidden;
 }
-
+.text-center {
+    text-align: center;
+}
+header.masthead .container{
+    padding-top: 30px;
+}
 @media screen and (min-width:1200px) {
     header.masthead h1 {
         font-size: 4rem;
@@ -102,14 +93,18 @@ header{
         font-weight: 800;
         line-height: 55px;
     }
+    .navbar-brand {
+        padding-left: 50px;
+    }
 }
 @media screen and (min-width:992px) {
     header.masthead h1 {
-        font-size: 60px;
+        font-size: 58px;
     font-weight: 800;
     line-height: 70px;
     letter-spacing: -1px;
     }
+    
     .cd-headline {
         font-size: 4rem;
     }
@@ -122,6 +117,18 @@ header{
     p{
         font-size: 20px;
     }
+    header.masthead {
+        height: 100vh;
+        min-height: 650px;
+        padding-top: 0;
+        padding-bottom: 0;
+      }
+      ul.navbar-nav li{
+          padding: 15px;
+      }
+      .navbar-brand {
+          padding-left: 50px;
+      }
 }
 
 .cd-headline {
@@ -135,13 +142,13 @@ header{
         background-image: url(../img/blue-back.png);
     }
     25%{
-        background-image: url(../img/pink-back.svg);
+        background-image: url(../img/pink-back.jpeg);
     }
     50%{
         background-image: url(../img/purple-back.png);
     }
     75%{
-        background-image: url(../img/brown-back.jpeg);
+        background-image: url(../img/black-white.png);
     }
 }
 .technologies-section{
@@ -183,12 +190,11 @@ h2.mrg-b {
     border-radius: 10px;   
 }
 
-.our-services img.web-dev{
-    padding-bottom:30px;
-}
-
-.our-services img.chatbot {
-    padding-bottom: 40px;
+.our-services div.img-box{
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 60px;
 }
 .title {
     text-align: center;
@@ -208,5 +214,8 @@ padding-right: 10px;
 text-align: center;
 padding-bottom: 30px;
 margin-top:10px;
-line-height: 35px;
+font-size: 16px;
+line-height: 28px;
+font-weight: 600;
+color: #252b33;
 }
