--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,7 @@ body {
     font-family: Poppins, Open Sans, Helvetica Neue, Arial, sans-serif;
     color: #fff;
 }
-h1,h2,h3,h4,h5,h6,#mainNav, #mainNav .navbar-brand,p,.masthead button a,span{
+h1,h2,h3,h4,h5,h6,#mainNav, #mainNav .navbar-brand,p,.masthead button a,span,form,a.footer-link{
     font-family: Poppins, Open Sans, Helvetica Neue, Arial, sans-serif;
     font-weight:  400;
 }
@@ -219,3 +219,54 @@ line-height: 28px;
 font-weight: 600;
 color: #252b33;
 }
+
+ul.footer-links {
+    list-style: none;
+    padding-left: 0;
+}
+
+a.footer-link{
+    text-decoration: none;
+    font-size: 16px;
+}
+a.footer-link:hover {
+    cursor: pointer;
+    color: #252b33;
+}
+.social-media i{
+    font-size:large;
+}
+.cp-text{
+     color: rgba(0,0,0,.7); 
+     text-shadow: 0 1px rgba(255, 255, 255, 0.1);
+     font-weight:  500;
+     line-height: 1.7;
+     font-size: 1.25rem;
+}
+
+/* vertical submenu */
+#subNav {
+    position: absolute;
+    
+}
+.vertical-menu {
+  background-color: black ;
+  position: fixed;
+    bottom:0;
+  }
+  
+  .vertical-menu a {
+    background-color: #eee;
+    color: black;
+    padding: 12px;
+    text-decoration: none;
+  }
+  
+  .vertical-menu a:hover {
+    background-color: #ccc;
+  }
+  
+  .vertical-menu a.active {
+    background-color: #4CAF50;
+    color: white;
+  }
