--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -107,6 +107,12 @@ header.masthead .container{
         font-size:30px;
     }
 }
+@media (max-width: 575.98px) { 
+    header.masthead .container {
+        height: 100vh;
+    }
+}
+
 @media screen and (min-width:992px) {
     header.masthead h1 {
         font-size: 58px;
