--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,9 +45,16 @@ h1,h2,h3,h4,h5,h6,#mainNav, #mainNav .navbar-brand,p,.masthead button a,span,for
 
 .overlay .closebtn {
     position: absolute;
-    top: 20px;
-    right: 45px;
+    top: 1px;
+    left: 5px;
     font-size: 60px;
+}
+
+.overlay button {
+    position: absolute;
+    top: 24px;
+    right: 45px;
+    font-size: 35px;
 }
 a.mob-nav{
     color:black !important;
@@ -158,22 +165,22 @@ header.masthead .container{
         background: rgb(124,124,210);
 background: linear-gradient(90deg, rgba(124,124,210,1) 3%, rgba(80,79,146,1) 36%, rgba(78,78,144,1) 100%);  
     }
-    20%{
+    25%{
         /* background-image: url(../img/pink-back.jpeg); */
         background: rgb(223,212,182);
         background: linear-gradient(90deg, rgba(223,212,182,1) 62%, rgba(223,212,182,1) 100%, rgba(245,235,226,1) 100%); 
     }
-    40%{
+    50%{
         background-image: url(../img/purple-back.png);
     }
-    60%{
+    75%{
         background: rgb(124,126,213);
         background: linear-gradient(90deg, rgba(124,126,213,1) 0%, rgba(57,92,124,1) 0%, rgba(25,49,85,1) 89%); 
     }
-    80%{
+    /* 80%{
         background: rgb(124,126,213);
         background: linear-gradient(90deg, rgba(124,126,213,1) 100%, rgba(124,126,213,1) 100%, rgba(124,126,213,1) 100%); 
-    }
+    } */
 }
 .technologies-section{
     margin-top:30px;
@@ -274,5 +281,17 @@ a.footer-link:hover {
      font-weight:  500;
      line-height: 1.7;
      font-size: 1.25rem;
+}
+/* .values div.container{
+    margin-top:20px;
+} */
+.nav-pills .nav-link.active, .nav-pills .show>.nav-link {
+    color: #fff !important;
+    background-color: black !important;
+}
+section.values .container a.nav-link{
+    color: #fff !important;
+    background-color: black !important;
+    margin-bottom: 10px;
 }
 
