--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -276,7 +276,7 @@ a.footer-link:hover {
     font-size:large;
 }
 .cp-text{
-     color: rgba(0,0,0,.7); 
+     /* color: rgba(0,0,0,.7);  */
      text-shadow: 0 1px rgba(255, 255, 255, 0.1);
      font-weight:  500;
      line-height: 1.7;
