--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -128,6 +128,9 @@ header.masthead .container{
         width: 285px; 
         height: 212px;
     }
+    #mainNav img{
+        margin-left:20px;
+    }
 }
 @media (max-width: 575.98px) { 
     header.masthead .container {
