--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -227,19 +227,20 @@ header.masthead .container{
 @keyframes animate{
     0%,100%{
         background: rgb(124,124,210);
-background: linear-gradient(90deg, rgba(124,124,210,1) 3%, rgba(80,79,146,1) 36%, rgba(78,78,144,1) 100%);  
+/* background: linear-gradient(90deg, rgba(124,124,210,1) 3%, rgba(80,79,146,1) 36%, rgba(78,78,144,1) 100%);   */
     }
     25%{
         /* background-image: url(../img/pink-back.jpeg); */
         background: rgb(223,212,182);
-        background: linear-gradient(90deg, rgba(223,212,182,1) 62%, rgba(223,212,182,1) 100%, rgba(245,235,226,1) 100%); 
+        /* background: linear-gradient(90deg, rgba(223,212,182,1) 62%, rgba(223,212,182,1) 100%, rgba(245,235,226,1) 100%);  */
     }
     50%{
-        background-image: url(../img/purple-back.png);
+        background: rgb(124,126,213);
+        /* background-image: url(../img/purple-back.png); */
     }
     75%{
         background: rgb(124,126,213);
-        background: linear-gradient(90deg, rgba(124,126,213,1) 0%, rgba(57,92,124,1) 0%, rgba(25,49,85,1) 89%); 
+        /* background: linear-gradient(90deg, rgba(124,126,213,1) 0%, rgba(57,92,124,1) 0%, rgba(25,49,85,1) 89%);  */
     }
     /* 80%{
         background: rgb(124,126,213);
