--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: Poppins, Open Sans, Helvetica Neue, Arial, sans-serif;
-    color: #fff;
+    color: #212529!important;;
 }
 h1,h2,h3,h4,h5,h6,#mainNav, #contactmainNav, #blogmainNav, #mainNav .navbar-brand,p,.masthead button a,span,form,a.footer-link{
     font-family: Poppins, Open Sans, Helvetica Neue, Arial, sans-serif;
@@ -12,6 +12,7 @@ h1,h2,h3,h4,h5,h6,#mainNav, #contactmainNav, #blogmainNav, #mainNav .navbar-bran
     background-color: black! important;
     color: #fff !important;
 }
+
 .overlay {
     height: 100%;
     width: 0%;
