--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,8 +12,14 @@ h1,h2,h3,h4,h5,h6,#mainNav, #contactmainNav, #blogmainNav, #mainNav .navbar-bran
     background-color: black! important;
     color: #fff !important;
 }
-
-.overlay {
+#night-toggle-mob{
+    font-size: 20px;
+    right: 8px;
+}
+.dark{
+    color: black !important;
+}
+.dark-overlay {
     height: 100%;
     width: 0%;
     position: fixed;
@@ -21,15 +27,44 @@ h1,h2,h3,h4,h5,h6,#mainNav, #contactmainNav, #blogmainNav, #mainNav .navbar-bran
     left: 0;
     top: 0;
     background-color: black;
+    overflow-x: hidden;
+    transition: 0.5s;
+}
+.dark-overlay-content {
+    position: relative;
+    top: 6%;
+    width: 100%;
+    text-align: left;
+    margin-top:30px;
+}
+.dark-overlay a {
+    padding: 8px;
+    text-decoration: none;
+    font-size: 36px;
+    color: white;
+    display: block;
+    transition: 0.3s;
+}
+.dark-mob-nav{
+        color:white !important;
+        font-size: 30px !important;
+}
+.overlay {
+    height: 100%;
+    width: 0%;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
     background-color: white;
     overflow-x: hidden;
     transition: 0.5s;
 }
 .overlay-content {
     position: relative;
-    top: 25%;
+    top: 6%;
     width: 100%;
-    text-align: center;
+    text-align: left;
     margin-top:30px;
 }
 .overlay a {
@@ -40,15 +75,12 @@ h1,h2,h3,h4,h5,h6,#mainNav, #contactmainNav, #blogmainNav, #mainNav .navbar-bran
     display: block;
     transition: 0.3s;
 }
-.overlay a:hover, .overlay a:focus {
-    color: black;
-}
 
 .overlay .closebtn {
     position: absolute;
     top: 1px;
     left: 5px;
-    font-size: 60px;
+    font-size: 40px;
 }
 
 .overlay button {
@@ -57,18 +89,17 @@ h1,h2,h3,h4,h5,h6,#mainNav, #contactmainNav, #blogmainNav, #mainNav .navbar-bran
     right: 45px;
     font-size: 35px;
 }
+.dark-overlay button {
+        position: absolute;
+        top: 24px;
+        right: 45px;
+        font-size: 35px;
+}
 a.mob-nav{
     color:black !important;
     font-size: 30px !important;
 }
-@media screen and (max-height:450px) {
-    .overlay a{font-size:20px}
-    .overlay .closebtn {
-        font-size: 40px;
-        top: 15px;
-        right:35px;
-    }
-}
+
 #mainNav {
     border-color:transparent;
     background-color: transparent;
@@ -137,8 +168,21 @@ header.masthead .container{
     }
 }
 @media (max-width: 575.98px) { 
+    #full-head h1{
+        margin-top:30%;
+        padding-top: 50px;
+        text-align:left;
+        padding-left:30px;
+    }
+    #full-head .next{
+        padding-top:10px;
+        padding-bottom: 10px;
+    }
+    .navbar-light .navbar-toggler {
+        border-color: transparent !important;
+    }
     header.masthead .container {
-        height: 100vh;
+        height: 90vh;
     }
     .title{
         margin-bottom: 10px !important;
@@ -165,8 +209,35 @@ header.masthead .container{
     p.cp-text{
         font-size: 18px;
     }
+    a.navbar-brand{
+        margin-left:0px;
+    }
+    section.values .img-card{
+        margin-left: 89px;
+        margin-right: 109px;
+        padding-left: 43px;
+        padding-right: 50px;
+        margin-top: 4px;
+        padding-top: 29px;
+        padding-bottom: 30px;
+    }
+    section.intro h1{
+        margin-top: 0px;
+    }
+    section.intro .col-lg-6 > p{
+        margin-top: 0px !important;
+    }
+    .accomplishments .three{
+        margin-top:35px !important;
+    }
+    .accomplishments .four {
+        margin-top:35px !important;
+    }
 }
 @media screen and (min-width:992px) {
+    section.intro h1{
+        margin-top:5rem;
+    }
     header.masthead h1 {
         font-size: 58px;
     font-weight: 800;
@@ -236,21 +307,24 @@ header.masthead .container{
     padding-bottom: 20px;
 }
 @keyframes animate{
-    0%,100%{
+    0%{
         background: rgb(124,124,210);
 /* background: linear-gradient(90deg, rgba(124,124,210,1) 3%, rgba(80,79,146,1) 36%, rgba(78,78,144,1) 100%);   */
     }
     25%{
         /* background-image: url(../img/pink-back.jpeg); */
-        background: #f2994a;
+        background: #b8c6db;
         /* background: linear-gradient(90deg, rgba(223,212,182,1) 62%, rgba(223,212,182,1) 100%, rgba(245,235,226,1) 100%);  */
     }
     50%{
-        background: #4B6F44;
+        background:  #f9d29d;
     }
     75%{
-        background: rgb(124,126,213);
+        background: #f2994a;
         /* background: linear-gradient(90deg, rgba(124,126,213,1) 0%, rgba(57,92,124,1) 0%, rgba(25,49,85,1) 89%);  */
+    }
+    100%{
+        background: rgb(124,126,213);
     }
 }
 .technologies-section{
