--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -174,6 +174,16 @@ header.masthead .container{
         text-align:left;
         padding-left:30px;
     }
+    .navbar-brand{
+        padding-right: 40%!important;
+    }
+    #full-head p.text-faded{
+        text-align: left;
+        padding-left:30px;
+    }
+    #full-head button{
+        margin-left:auto !important;
+    }
     #full-head .next{
         padding-top:10px;
         padding-bottom: 10px;
