--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -168,14 +168,21 @@ header.masthead .container{
     }
 }
 @media (max-width: 575.98px) { 
+    .homepage-next .col-lg-8 {
+        text-align: center !important;
+    }
     #full-head h1{
         margin-top:30%;
         padding-top: 50px;
         text-align:left;
         padding-left:30px;
+        font-weight: 600;
+        line-height: 30px;
+        letter-spacing: 1px;
     }
     .navbar-brand{
-        padding-right: 40% !important;
+        padding-right: 50% !important;
+        margin-right: 0rem !important;
     }
     #full-head p.text-faded{
         text-align: left;
