--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -210,6 +210,9 @@ header.masthead .container{
     }
 }
 @media (max-width: 575.98px) { 
+    header.masthead .container {
+        padding-top: 0px !important;
+    }
     .blog .col-lg-4{
         margin-bottom: 20px;
     }
@@ -229,8 +232,8 @@ header.masthead .container{
         text-align: center !important;
     }
     #full-head h1{
-        margin-top:30%;
-        padding-top: 50px;
+        /* margin-top:30%;
+        padding-top: 50px; */
         text-align:left;
         padding-left:30px;
         font-weight: 600;
